VirusCheck Bug Fixes + .sh Fix